# libquake

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/quakelib/common/: entities.h  entity_parser.h  surface.h  vertex.h
include/quakelib/map/: brush.h  entities.h  face.h  map.h  map_file.h  qmath.h  types.h
include/quakelib/wad/: default_pal.h  palette.h  wad.h
src/: CMakeLists.txt
src/common/: entity.cpp  entity_parser.cpp  surface.cpp  vertex.cpp
src/map/: brush.cpp  entity_solid.cpp  face.cpp  map.cpp  map_file.cpp  qmath.cpp  wrapper.cpp  wrapper.h
src/wad/: palette.cpp  texture.cpp  wad.cpp
testapp/: main.cpp
